# src_fast_zero

./: pyproject.toml
fast_zero/: app.py  schemas.py  security.py
fast_zero/core/: security.py
fast_zero/middlewares/: exception_middleware.py
fast_zero/routers/: auth.py  todos.py  users.py
fast_zero/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 3d57114f2424_create_users_table.py  48cd1dcfbd16_changed_update_at_to_updated_at.py  7a8b40fb3e95_create_todos_table.py  901918b2e097_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_users.py
tests/core/: test_security.py
tests/core/database/: test_db.py
tests/routers/: test_auth.py  test_todos.py  test_users.py
